<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".HomeActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:elevation="24dp"
        android:onClick="showFashionProducts"
        app:cardCornerRadius="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/clothes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:alpha="0.4"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/tv_fashion_two"
                app:layout_constraintTop_toTopOf="@id/tv_fashion_one" />

            <TextView
                android:id="@+id/tv_fashion_one"
                style="@style/HomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion_one"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_fashion_two"
                style="@style/HomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fashion_two"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:elevation="24dp"
        android:onClick="showElectronicsProducts"
        app:cardCornerRadius="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/electronics" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:alpha="0.4"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/tv_electronics_two"
                app:layout_constraintTop_toTopOf="@id/tv_electronics_one" />

            <TextView
                android:id="@+id/tv_electronics_one"
                style="@style/HomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electronics_one"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_electronics_two"
                style="@style/HomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/electronics_two"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:elevation="24dp"
        android:onClick="showFurnitureProducts"
        app:cardCornerRadius="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/furniture" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:alpha="0.4"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/tv_furniture_two"
                app:layout_constraintTop_toTopOf="@id/tv_furniture_one" />

            <TextView
                android:id="@+id/tv_furniture_one"
                style="@style/HomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/furniture_one"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_furniture_two"
                style="@style/HomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/furniture_two"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>