<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_blue"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:alpha="0.7"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/bg1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:onClick="choosePicture"
            app:cardCornerRadius="80dp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/view">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/bg3" />

        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_bg"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/write_your_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@id/cv_profile"
            app:layout_constraintStart_toStartOf="@id/cv_profile"
            app:layout_constraintTop_toBottomOf="@id/cv_profile" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            tools:text="Email: a@gmail.com" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/enter_your_mobile_number"
            android:inputType="phone"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="top"
            android:hint="@string/address"
            android:minLines="3"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/et_mobile" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:onClick="updateProfile"
            android:src="@drawable/ic_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
